# yolo-cpp

./: CMakeLists.txt  README.md
configs/: config.yaml
include/yolo/: AppManager.hpp  VideoProcessor.hpp
include/yolo/detector/: BaseDetector.hpp  OpenCVDetector.hpp  OpenVINODetector.hpp  TensorRTDetector.hpp
include/yolo/gui/: GUIRenderer.hpp  GUIRendererCV.hpp  GUIRendererGL.hpp
src/: AppManager.cpp  VideoProcessor.cpp  main.cpp  util.cpp
src/detector/: BaseDetector.cpp  OpenCVDetector.cpp  OpenVINODetector.cpp  TensorRTDetector.cpp
src/gui/: GUIRenderer.cpp  GUIRendererCV.cpp  GUIRendererGL.cpp
